<resources>
    <string name="app_name">JepTags Business</string>
    <string name="app_name_beta">JepTags Business</string>
    <string name="app_name_website">JepTags Business</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="msg_change_locale">masg change</string>
    <string name="txt_setting_changeyourlocale">Change your language</string>
    <string name="auth_remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_in">LOGIN</string>
    <string name="profile">Profile</string>
    <string name="auth_forgot_password">Forgot Password?</string>
    <string name="auth_hint_email">* Email</string>
    <string name="auth_hint_password">* Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="first_name">* First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">* Last Name</string>
    <string name="auth_hint_username">* Username</string>
    <string name="auth_hint_repassword">* Confirm Password</string>
    <string name="landing_already_have_account">Already have an account?</string>
    <string name="landing_sign_up">SIGN UP WITH EMAIL</string>
    <string name="choose_a_service">CHOOSE A SERVICE</string>
    <string name="validation_username">Please Enter username</string>
    <string name="validation_password">Please enter password</string>
    <string name="wait_loading">wait loading</string>
    <string name="login_success">Login successfully</string>
    <string name="validate_fullname">Please enter fullname</string>
    <string name="validate_firstname">Please enter First Name</string>
    <string name="validate_lastname">Please enter Last Name</string>
    <string name="validate_streat">Please Streat Address</string>
    <string name="validate_email">Please enter email address</string>
    <string name="validation_repassword">Please confirm password</string>
    <string name="validate_repassword_match">Password and Confirm password is not matching</string>
    <string name="success_user_create">User created successfully.</string>
    <string name="wait_create_user">Creating user please wait..</string>
    <string name="wait_login_into_system">Logging into system please wait...</string>
    <string name="scan_you_nfc_tag">ANTI-COUNTERFEITING PRODUCTS</string>
    <string name="nav_scan_product">Scan NFC tag</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_language">Language</string>
    <string name="nav_profile">Profile</string>
    <string name="title_activity_write_tag">Encode Tag</string>
    <string name="nav_encode_tag">Scan to encode</string>
    <string name="generate_tag_id">Generate encode ID</string>
    <string name="encode_success">Encode tag successfully</string>
    <string name="title_activity_view_product">View Product</string>
    <string name="product_details">Product Details</string>
    <string name="vendor_details">Domestic Information</string>
    <string name="wait_product_data">Please wait product data is loading</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="product_load_error">Product not found or error while loading product</string>
    <string name="title_activity_product_edit">Update Product</string>
    <string name="product_name">* Product Name</string>
    <string name="product_website">Website</string>
    <string name="brand_name">* Brand Name</string>
    <string name="add_product_image">ADD PRODUCT IMAGE</string>
    <string name="product_category">* Category</string>
    <string name="product_condition">* Item Condition</string>
    <string name="product_sub_category">* Sub Category</string>
    <string-array name="product_weight">
        <item>Kg</item>/
        <item>gms</item>
    </string-array>
    <string name="product_length">* Length</string>
    <string name="product_width">* Width</string>
    <string name="product_height">* Height</string>
    <string name="product_desc">* Description</string>
    <string name="remove_product_image">REMOVE IMAGES</string>
    <string name="save_product">Save Product</string>
    <string name="wait_reading_tag">waiting for reading tag</string>
    <string name="wait_category_loading">Please wait product category is loading...</string>
    <string name="product_category_load_error">Product category loading error</string>
    <string name="validate_product_category">Product category cannot be empty.</string>
    <string name="wait_image_uploading">Please wait image is uploading</string>
    <string name="validate_prod_name">Please enter product name.</string>
    <string name="validate_brand">Please select product brand</string>
    <string name="validate_prod_condition">Please select product condition</string>
    <string name="validate_prod_category">Please select product category</string>
    <string name="validate_prod_sub_category">Please select product Subcategory</string>
    <string name="validate_barcode">Please scan barcode</string>
    <string name="validate_quantity1">Please enter product Quantity.</string>
    <string name="validate_quantity2">Please do not enter less value to previous</string>
    <string name="validate_weight">Enter weight.</string>
    <string name="validate_location">Please Get Location</string>
    <string name="validate_price">Enter Price.</string>
    <string name="validate_gps">Please get GPS location</string>
    <string name="validate_product_category_empty">Please select product category</string>
    <string name="validate_product_desc">Product description can not be empty.</string>
    <string name="wait_updating_product_data">Please wait we are updating product data</string>
    <string name="success_product_update">Product updated successfully.</string>
    <string name="nfc_support_error">Your device doesnt support NFC</string>
    <string name="nfc_enabled_error">Please enabled NFC to support this app</string>
    <string name="tag_not_recogniz_error">We are not able to recognize tag.</string>
    <string name="productid_empty_error">Product ID in tag is empty</string>
    <string name="nav_edit_product">Update Product</string>
    <string name="nav_scan">Scan Product</string>
    <string name="country">* Country</string>
    <string name="city">* City</string>
    <string name="postal_code">* Postal Code</string>
    <string name="phoneno">* Phone No</string>
    <string name="validate_country">Please select country</string>
    <string name="validate_city">Please enter city name</string>
    <string name="validate_state">Please enter state name</string>
    <string name="validate_postal_code">Please enter postal code</string>
    <string name="validate_phoneno">Please enter phone no</string>
    <string name="address">Address</string>
    <string name="validate_address">Please enter address</string>
    <string name="title_activity_product_list">Product List</string>
    <string name="product_id">Product Id</string>
    <string name="product_qty">* Quantity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="validate_prod_id">Please scan nfc tag before add product</string>
    <string name="validate_product_qty">Please enter product quantity.</string>
    <string name="title_activity_product_add">Add Products</string>
    <string name="poduct_nfc_count_error">Please Scan All NFC Tag to further proceed.</string>
    <string name="lbl_qty_status">Please scan more  nfs tags to complete update  Product</string>
    <string name="validate_qty_with_total">All product already scanned.You cannot add more items</string>
    <string name="something_wrong">Something wrong with code</string>
    <string name="wait_batch_product_ipdating">Please wait we are updating product data</string>
    <string name="wait_product_list_loading">Please wait product list is loading...</string>
    <string-array name="product_price">
        
        <item>USD</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="seller_address">Seller Address</string>
    <string name="save_profile">Save Profile</string>
    <string name="save_address">Save Address</string>
    <string name="wait_loading_user_data">Please wait loading user data...</string>
    <string name="wait_update_user">Please wait updating user data</string>
    <string name="success_update_create">Updating user data successfully</string>
    <string name="comments">User Comments</string>
    <string name="wait_domestic_customer_data_loading">Please wait domestic customer data is loading..</string>
    <string name="please_choose_image">Please choose image</string>
    <string name="permission_denied">Permission not granted</string>
    <string name="wait_generating_id">Please generating NFC TAG ID...</string>
    <string name="nfc_tag_near_to_mobile">Please make sure your NFC TAG Near to your mobile to write.</string>
    <string name="title_activity_product_image_view">Image</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="product_manufacture_location">Authentic Address</string>
    <string name="gps_disabled_message">Enable GPS to update product</string>
    <string name="unauthroized_edit_product">You are not authorized to edit this product</string>
    <string name="error_product_data_empty">Product data is empty</string>
    <string name="error_no_domestic_customer_found">No Customer found against product</string>
    <string name="skype">Skype Id</string>
    <string name="facebook">Facebook Username</string>
    <string name="validate_facebook">Please Enter Facbook Username</string>
    <string name="validate_skype">Please Enter Skype Id</string>
    <string name="send_us_feedback">Send Us Feedback</string>
    <string name="company_info">Jep Tags is the solution about anti-counterfeiters on the World had started up in Silicon Valley CA, with hoppy provides a full- service system for brand Owner, Trader, Exporter looking for complete cost-effective to protecting your business and your customer</string>
    <string name="anti_counterfeiting_solutions"><u>ANTI-COUNTERFEITING</u></string>
    <string name="service_online">SERVICE ONLINE 24 X 7</string>
    <string name="authenticity">AUTHENTICITY GUARANTEED 100%</string>
    <string name="sale_offline">Sale Offline</string>
    <string name="streat_address">* Streat Address</string>
    <string name="state">* State</string>
    <string name="zip_code">* Zip/Postal Code</string>
    <string name="telephone">* Cellphone</string>
    <string name="seller_msg">Please select Address</string>
    <string name="default_add">Default</string>
    <string name="other_add">Other</string>
    <string name="new_a">New</string>
    <string name="sale_jeptag">Sale JepTag</string>
    <string name="select_ms">Please select sale option</string>
    <string name="select_online">Sale Online</string>
    <string name="ok">Ok</string>
    <string name="longitude">* Longitude</string>
    <string name="latitude">* Latitude</string>
    <string name="store_name">* Store Name</string>
    <string name="store_id">* Store ID</string>
    <string name="full_name">* Full Name</string>
    <string name="store_address">* Store Address</string>
    <string name="street">* Street Address</string>
    <string name="company_name">* Company Name</string>
    <string name="fax">Fax</string>
    <string name="address_book">Address Book</string>
    <string name="contract_information"><i>Contact Information</i></string>
    <string name="contract_person_name">* Contact Person Name</string>
</resources>